--- a/iRh/iRh.Windows/iRh.Windows.csproj
+++ b/iRh/iRh.Windows/iRh.Windows.csproj
@@ -46,14 +46,83 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Cadastro\frmFuncionario.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Cadastro\frmFuncionario.Designer.cs">
+      <DependentUpon>frmFuncionario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PrincipalMdi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PrincipalMdi.Designer.cs">
+      <DependentUpon>PrincipalMdi.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Simuladores\frmBeneficioAdicionalNoturno.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficioAdicionalNoturno.Designer.cs">
+      <DependentUpon>frmBeneficioAdicionalNoturno.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficioFerias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficioFerias.Designer.cs">
+      <DependentUpon>frmBeneficioFerias.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficioFgts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficioFgts.Designer.cs">
+      <DependentUpon>frmBeneficioFgts.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficioHoraExtra.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficioHoraExtra.Designer.cs">
+      <DependentUpon>frmBeneficioHoraExtra.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficioPericulosidade.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficioPericulosidade.Designer.cs">
+      <DependentUpon>frmBeneficioPericulosidade.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficioPis.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficioPis.Designer.cs">
+      <DependentUpon>frmBeneficioPis.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficioSeguroDesemprego.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficioSeguroDesemprego.Designer.cs">
+      <DependentUpon>frmBeneficioSeguroDesemprego.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficoValeTransporte.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Simuladores\frmBeneficoValeTransporte.Designer.cs">
+      <DependentUpon>frmBeneficoValeTransporte.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Simuladores\frmDescontoInss.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Simuladores\frmDescontoInss.Designer.cs">
+      <DependentUpon>frmDescontoInss.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Simuladores\frmDescontoIrrf.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Simuladores\frmDescontoIrrf.Designer.cs">
+      <DependentUpon>frmDescontoIrrf.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="PrincipalMdi.resx">
+      <DependentUpon>PrincipalMdi.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +132,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Simuladores\frmBeneficioAdicionalNoturno.resx">
+      <DependentUpon>frmBeneficioAdicionalNoturno.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -76,5 +148,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
